# ExtractDigit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
extract_digit/: estimate_digit.py  main.py  param_config.py  processing.py  utils.py
extract_digit/configs/: config.json
extract_digit/devs/: test.py  test2.py
extract_digit/devs/gui/: TkinterTemplate.py  check_fontfamily.py  main_window.py  test_treeview.py  treeview_selector.py
notebook/: estimate_digit.py  extracting_from_image.ipynb  process_extracted_digits.ipynb
tests/: test_config.py
