[tool.poetry]
name = "extract-digit"
version = "0.1.0"
description = ""
authors = ["Ryuichi Shinsei <275051h@gs.kochi-tech.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^2.0.0"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.1"
pillow = "^10.4.0"
pydantic = "^2.8.2"
polars = "^1.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
exclude = [".venv", "venv", "__pycache__", ".git"]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = [
    "C",
    "E",
    "F",
    "ARG",
    "I",
    "W",
]
ignore = [
]
fixable = ["ALL"]
unfixable = [
    "F401"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 10
